data/derived/fa15/progs/unify/prog3686.ml.out
Characters 144-153:
  | Sine sin		    -> Printf.printf ("sin(%s)" sin)
                                    ^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
